Added Game of Life made with paper.js

--- a/pages/paper.html
+++ b/pages/paper.html
@@ -14,12 +14,14 @@
 </head>
 
 <body>
+    <canvas id="canvas1" resize="true"></canvas>
 </body>
 
 <footer>
 </footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-<script src="node_modules/paper/dist/paper-core.min.js"></script>
+<script type="text/javascript" src="node_modules/paper/dist/paper-full.min.js"></script>
+<script type="text/javascript" canvas="canvas1" src="js/papertest.js"></script>
 <script src="js/index.js"></script>
 </html>
