Updated the navbar to direct to proper pages.

--- a/html/league.html
+++ b/html/league.html
@@ -17,29 +17,18 @@
     </head>
 
     <body>
-        <div class="app-bar-expand-md" data-role="appbar">
-            <a href="#" class="d-block brand no-hover">
-                <span class="border bd-black border-radius p-2">m<sup>4</sup></span>
+        <nav class="app-bar-expand-md" data-role="appbar">
+            <a href="/" class="d-block brand no-hover">
+                <span class="border bd-red border-radius p-3">B</span>
             </a>
 
             <ul class="app-bar-menu">
-                <li><a href="#">Home</a></li>
-                <li>
-                    <a href="#" class="dropdown-toggle">Products</a>
-                    <ul class="d-menu" data-role="dropdown">
-                        <li><a href="#">Windows 10</a></li>
-                        <li><a href="#">Office 365</a></li>
-                        <li class="divider bg-lightGray"></li>
-                        <li><a href="#">Skype</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="league">League Demo</a></li>
+                <li><a href="paperpage">Paper Demo</a></li>
+                <li><a href="escc">ESCC Demo</a></li>
             </ul>
-        </div>
+        </nav>
 
-
-    <!--
         <table class="table cell-5 mt-14">
             <thead id="th">
                 <tr>
@@ -51,7 +40,6 @@
             <tbody id="tb">
             </tbody>
         </table>
-    -->
 
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script>
