--- a/html/index.html
+++ b/html/index.html
@@ -24,21 +24,13 @@
     <body>
         <nav class="app-bar-expand-md" data-role="appbar">
             <a href="#" class="d-block brand no-hover">
-                <span class="border bd-black border-radius p-2">m<sup>4</sup></span>
+                <span class="border bd-red border-radius p-3">B</span>
             </a>
 
             <ul class="app-bar-menu">
-                <li><a href="#">Home</a></li>
-                <li>
-                    <a href="#" class="dropdown-toggle">Products</a>
-                    <ul class="d-menu" data-role="dropdown">
-                        <li><a href="#">Windows 10</a></li>
-                        <li class="divider bg-lightGray"></li>
-                        <li><a href="#">Skype</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="league">League Demo</a></li>
+                <li><a href="paperpage">Paper Demo</a></li>
+                <li><a href="escc">ESCC Demo</a></li>
             </ul>
         </nav>
 		
