--- a/html/league.html
+++ b/html/league.html
@@ -25,7 +25,7 @@
             <ul class="app-bar-menu">
                 <li><a href="league">League Demo</a></li>
                 <li><a href="paperpage">Paper Demo</a></li>
-                <li><a href="escc">ESCC Demo</a></li>
+                <li><a href="es">ES Demo</a></li>
             </ul>
         </nav>
 
