--- a/html/escc.html
+++ b/html/escc.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
     <link type="text/css" rel="stylesheet" href="css/style.css">
 
-    <title>ES</title>
+    <title>ESC</title>
 </head>
 
 <body>
@@ -32,8 +32,8 @@
         </nav>
     </div>
     <ul id="nav-mobile" class="sidenav">
-        <li><a href="info" class="header-content">Info</a></li>
-        <li><a href="mission" class="header-content">Mission</a></li>
+        <li><a href="#" class="header-content">Info</a></li>
+        <li><a href="#" class="header-content">Mission</a></li>
         <li><a href="registeration" class="header-content">Registeration</a></li>
     </ul>
 
@@ -41,7 +41,7 @@
     <img class="frontpage-img" src="res/th.jpg">
 
     <div class="frontpage-text">
-        <h1>ES</h1>
+        <h1>ESC</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut a quam at erat luctus aliquet commodo vel est.
             In ullamcorper dui sit amet odio porta aliquet. Nullam id lobortis metus, ac bibendum elit. Nunc eget ipsum
             nec urna egestas ullamcorper. Sed lacinia tellus id arcu congue luctus. Lorem ipsum dolor sit amet,
@@ -65,7 +65,7 @@
 <footer class="page-footer">
     <div class="footer footer-copyright">
         <div class="container">
-            © 2018 BSCAL
+            © 2018 ESC
             <a class="white-text right" href="#!">More Links</a>
         </div>
     </div>
