--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,7 @@
         <div class="frontpage-text text-center">
             <h5 class="text-center">About Me</h5>
             <p class="text-center"> 
-                Hi my names is Jonathan, I am 20 years old and I have been teaching myself programming for around 2 years now. Programming
+                Hi, my name is Jonathan, I am 20 years old and I have been teaching myself programming for around 2 years now. Programming
                 is something I really enjoy both doing and learning in my life. I got interested in programming through Minecraft and game/game 
                 engine development. I got better by practicing programming, watching videos, reading books and stackoverflow, and also looking through 
                 how other people code. My favorite programming languages are C++ then Java. Now I have gotten into full stack web development 
