--- a/html/index.html
+++ b/html/index.html
@@ -1,79 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <link href="metro-icons.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.metroui.org.ua/v4/css/metro-all.min.css">
+        <link rel="stylesheet" href="css/index.css">
 
-    <link href="metro-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.metroui.org.ua/v4/css/metro-all.min.css">
-    <link rel="stylesheet" href="css/index.css">
+        <title>bscal</title>
+    </head>
 
-    <title>bscal</title>
-</head>
-
-<body>
-    <nav class="app-bar-expand-md" data-role="appbar" data-expand-point="md">
-        <a href="#" class="brand no-hover">
-            <span class="p-1">
-                <h2>B<sub>scal</sub></h5>
-            </span>
-        </a>
-    </nav>
-
-    <div class="frontpage-text">
-        <h1 class="text-center frontpage-text">bscal</h1>
-        <p class="text-center frontpage-text">Welcome to my Laning Page.</p>
-    </div>
-
-    <div class="seperator"></div>
-
-    <div class="frontpage-text text-center">
-        <h5 class="text-center">About Me</h5>
-        <p class="text-center">
-            Hi, my name is Jonathan, I am 20 years old and I have been teaching myself programming for around 2 years
-            now. Programming
-            is something I really enjoy both doing and learning in my life. I got interested in programming through
-            Minecraft and game/game
-            engine development. I got better by practicing programming, watching videos, reading books and
-            stackoverflow, and also looking through
-            how other people code. My favorite programming languages are C++ then Java. Now I have gotten into full
-            stack web development
-            too. I feel confident in my ability to learn or adapt at languages/libraries I am not so familiar with.
-        </p>
-    </div>
-
-    <div class="seperator"></div>
-
-    <div class="frontpage-text">
-        <h5 class="text-center pb-3">My SkillSet</h5>
-        <ul class="list-center">
-            <li>C++</li>
-            <li>Java</li>
-            <li>Javascript</li>
-            <li>PHP</li>
-            <li>C#</li>
-            <li>Little bit of C</li>
-			<li>Learning COBOL</li>
-			<li>Both front/backend web development</li>
-			<li>Decent server administration</li>
-        </ul>
-
-        <div class="seperator-no-line"></div>
-
-        <div class="text-center">
-            <span class="mif-github mif-2x line-center"></span>
-            <a href="https://github.com/bscal" class="line-center">
-                <h5>My Github</h5>
+    <body>
+        <nav class="app-bar-expand-md" data-role="appbar" data-expand-point="md">
+            <a href="#" class="brand no-hover">
+                <span class="p-1">
+                    <h2>B<sub>scal</sub></h5>
+                </span>
             </a>
+        </nav>
+
+        <div class="frontpage-text">
+            <h1 class="text-center frontpage-text">bscal</h1>
+            <p class="text-center frontpage-text">Welcome to my Laning Page.</p>
         </div>
-    </div>
 
-    <footer class="footer"></footer>
+        <div class="seperator"></div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script>
-</body>
+        <div class="frontpage-text text-center">
+            <h5 class="text-center">About Me</h5>
+            <p class="text-center">
+                Hi, my name is Jonathan, I am 20 years old and I have been teaching myself programming for around 2 years
+                now. Programming
+                is something I really enjoy both doing and learning in my life. I got interested in programming through
+                Minecraft and game/game
+                engine development. I got better by practicing programming, watching videos, reading books and
+                stackoverflow, and also looking through
+                how other people code. My favorite programming languages are C++ then Java. Now I have gotten into full
+                stack web development
+                too. I feel confident in my ability to learn or adapt at languages/libraries I am not so familiar with.
+            </p>
+        </div>
 
+        <div class="seperator"></div>
+
+        <div class="frontpage-text">
+            <h5 class="text-center pb-3">My SkillSet</h5>
+            <ul class="list-center">
+                <li>C++</li>
+                <li>Java</li>
+                <li>Javascript</li>
+                <li>Decent PHP and C#</li>
+                <li>Basics of C</li>
+    			<li>Learning COBOL</li>
+                <li>Both back/frontend web development</li>
+    			<li>Little server administration</li>
+            </ul>
+
+            <div class="seperator-no-line"></div>
+
+            <div class="text-center">
+                <span class="mif-github mif-2x line-center"></span>
+                <a href="https://github.com/bscal" class="line-center">
+                    <h5>My Github</h5>
+                </a>
+            </div>
+        </div>
+
+        <footer class="footer">
+            <div class="footer-content">
+                <p class="same-line">Contact:</p>
+                <p id="contact" class="same-line">jonfus123@hotmail.com</p>
+                <button class="button ml-3 copy-button" data-clipboard-target="#contact">
+                    <span class="mif-copy same-line"></span>
+                </button>
+            </div>
+        </footer>
+
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script>
+        <script src="/node_modules/clipboard/dist/clipboard.min.js"></script>
+        <script src="js/index.js"></script>
+    </body>
 </html>
