Updated README and index.html text

--- a/html/index.html
+++ b/html/index.html
@@ -37,9 +37,8 @@
                 Minecraft and game/game
                 engine development. I got better by practicing programming, watching videos, reading books and
                 stackoverflow, and also looking through
-                how other people code. My favorite programming languages are C++ then Java. Now I have gotten into full
-                stack web development
-                too. I feel confident in my ability to learn or adapt at languages/libraries I am not so familiar with.
+                how other people code. My favorite programming languages are C++, Java, and Lua. I try and keep up with Javascript and web development too.
+                Learning Vue.js and COBOL. I feel confident in my ability to learn or adapt at languages/libraries I am not so familiar with.
             </p>
         </div>
 
@@ -50,12 +49,10 @@
             <ul class="list-center">
                 <li>C++</li>
                 <li>Java</li>
+                <li>Lua</li>
                 <li>Javascript</li>
-                <li>Decent PHP and C#</li>
-                <li>Basics of C</li>
-    			<li>Learning COBOL</li>
                 <li>Both back/frontend web development</li>
-    			<li>Little server administration</li>
+    			<li>A little server administration</li>
             </ul>
 
             <div class="seperator-no-line"></div>
@@ -71,7 +68,7 @@
         <footer class="footer">
             <div class="footer-content">
                 <p class="same-line">Contact:</p>
-                <p id="contact" class="same-line">jonfus123@hotmail.com</p>
+                <p id="contact" class="email-text same-line">jonfus123@hotmail.com</p>
                 <button class="button ml-3 copy-button" data-clipboard-target="#contact">
                     <span class="mif-copy same-line"></span>
                 </button>
