Small updated to index.html text

--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,7 @@
         <div class="frontpage-text text-center">
             <h5 class="text-center">About Me</h5>
             <p class="text-center">
-                Hi, my name is Jonathan, I am 20 years old and I have been teaching myself programming for around 2 years
+                Hi, my name is bscal or Jonathan, I am 20 years old and I have been teaching myself programming for around 2 years
                 now. Programming
                 is something I really enjoy both doing and learning in my life. I got interested in programming through
                 Minecraft and game/game
