Setup repo for usage on github pages, index.html was moved to /root, href path changes, clipboard.js from cdn provider

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <link href="metro-icons.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.metroui.org.ua/v4/css/metro-all.min.css">
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="client/css/index.css">
 
         <title>bscal</title>
     </head>
@@ -77,7 +77,7 @@
 
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script>
-        <script src="/node_modules/clipboard/dist/clipboard.min.js"></script>
-        <script src="js/index.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js"></script>
+        <script src="client/js/index.js"></script>
     </body>
 </html>
